add the basic markup

--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <header>
+      <nav class="main-nav">
+        <div class="left-section">
+          <img
+            src="https://placehold.co/100"
+            alt="a placeholder logo"
+            class="logo"
+          />
+          <ul class="primary-links">
+            <li class="nav-links"><a href="#">ADMISSIONS</a></li>
+            <li class="nav-links"><a href="#">ACADEMICS</a></li>
+            <li class="nav-links"><a href="#">NOTICE</a></li>
+            <li class="nav-links"><a href="#">ABOUT</a></li>
+          </ul>
+        </div>
+        <div class="right-section">
+          <ul class="secondary-group">
+            <li class="nav-links"><a href="#">Staff</a></li>
+            <li class="nav-links"><a href="#">Students</a></li>
+            <li class="nav-links"><a href="#">Parents</a></li>
+            <li>
+              <input type="search" class="search-box" />
+              <span class="search-icon"></span>
+            </li>
+          </ul>
+        </div>
+        <ul class="info-list">
+          <li>
+            <img src="" alt="" />
+            <span>info@school.edu.in</span>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <span>+91-33-8585-8888</span>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
