delete old sprite sheet and img

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="stylesheet" href="./css/spritesheet.css" /> -->
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -15,33 +17,63 @@
             class="logo"
           />
           <ul class="primary-links">
-            <li class="nav-links"><a href="#">ADMISSIONS</a></li>
-            <li class="nav-links"><a href="#">ACADEMICS</a></li>
-            <li class="nav-links"><a href="#">NOTICE</a></li>
-            <li class="nav-links"><a href="#">ABOUT</a></li>
-          </ul>
-        </div>
-        <div class="right-section">
-          <ul class="secondary-group">
-            <li class="nav-links"><a href="#">Staff</a></li>
-            <li class="nav-links"><a href="#">Students</a></li>
-            <li class="nav-links"><a href="#">Parents</a></li>
-            <li>
-              <input type="search" class="search-box" />
-              <span class="search-icon"></span>
+            <li class="nav-links">
+              <a href="#"
+                >ADMISSIONS<span
+                  class="icons icon-chevron-down icon-extra-small"
+                ></span>
+              </a>
+            </li>
+            <li class="nav-links">
+              <a href="#">ACADEMICS</a>
+              <span class="icons icon-chevron-down icon-extra-small"></span>
+            </li>
+            <li class="nav-links">
+              <a href="#">NOTICE</a>
+              <span class="icons icon-chevron-down icon-extra-small"></span>
+            </li>
+            <li class="nav-links">
+              <a href="#">ABOUT</a>
+              <span class="icons icon-chevron-down icon-extra-small"></span>
             </li>
           </ul>
         </div>
-        <ul class="info-list">
-          <li>
-            <img src="" alt="" />
-            <span>info@school.edu.in</span>
-          </li>
-          <li>
-            <img src="" alt="" />
-            <span>+91-33-8585-8888</span>
-          </li>
-        </ul>
+        <div class="right-section">
+          <ul class="info-list">
+            <li>
+              <span class="icons icon-mail-o icon-small"></span>
+              <span>info@school.edu.in</span>
+            </li>
+            <li>
+              <span class="icons icon-phone-o icon-small"></span>
+              <span>+91-33-8585-8888</span>
+            </li>
+          </ul>
+          <ul class="secondary-group">
+            <li class="nav-links">
+              <a href="#"
+                >Staff
+                <span class="icons icon-chevron-sort-down"></span>
+              </a>
+            </li>
+            <li class="nav-links">
+              <a href="#"
+                >Students
+                <span class="icons icon-chevron-sort-down"></span>
+              </a>
+            </li>
+            <li class="nav-links">
+              <a href="#"
+                >Parents
+                <span class="icons icon-chevron-sort-down"></span>
+              </a>
+            </li>
+            <li>
+              <input type="search" class="search-box" />
+              <span class="search-icon icons icon-search-o icon-small"></span>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
   </body>
