primary layout completed

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="./css/spritesheet.css" /> -->
+    <link rel="stylesheet" href="./css/spriteSheet-v2.css" />
+    <link rel="stylesheet" href="./css/variables.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
   </head>
@@ -18,59 +19,50 @@
           />
           <ul class="primary-links">
             <li class="nav-links">
-              <a href="#"
-                >ADMISSIONS<span
-                  class="icons icon-chevron-down icon-extra-small"
-                ></span>
-              </a>
+              <a href="#">ADMISSIONS</a>
+              <span class="icon icon-chevron-down-short"></span>
             </li>
             <li class="nav-links">
               <a href="#">ACADEMICS</a>
-              <span class="icons icon-chevron-down icon-extra-small"></span>
+              <span class="icon icon-chevron-down-short"></span>
             </li>
             <li class="nav-links">
               <a href="#">NOTICE</a>
-              <span class="icons icon-chevron-down icon-extra-small"></span>
+              <span class="icon icon-chevron-down-short"></span>
             </li>
             <li class="nav-links">
               <a href="#">ABOUT</a>
-              <span class="icons icon-chevron-down icon-extra-small"></span>
+              <span class="icon icon-chevron-down-short"></span>
             </li>
           </ul>
         </div>
         <div class="right-section">
           <ul class="info-list">
             <li>
-              <span class="icons icon-mail-o icon-small"></span>
+              <span class="icon icon-mail-o"></span>
               <span>info@school.edu.in</span>
             </li>
             <li>
-              <span class="icons icon-phone-o icon-small"></span>
+              <span class="icon icon-phone-o"></span>
               <span>+91-33-8585-8888</span>
             </li>
           </ul>
           <ul class="secondary-group">
             <li class="nav-links">
-              <a href="#"
-                >Staff
-                <span class="icons icon-chevron-sort-down"></span>
-              </a>
+              <a href="#">Staff</a>
+              <span class="icon icon-chevron-down-short"></span>
             </li>
             <li class="nav-links">
-              <a href="#"
-                >Students
-                <span class="icons icon-chevron-sort-down"></span>
-              </a>
+              <a href="#">Students</a>
+              <span class="icon icon-chevron-down-short"></span>
             </li>
             <li class="nav-links">
-              <a href="#"
-                >Parents
-                <span class="icons icon-chevron-sort-down"></span>
-              </a>
+              <a href="#">Parents</a>
+              <span class="icon icon-chevron-down-short"></span>
             </li>
             <li>
               <input type="search" class="search-box" />
-              <span class="search-icon icons icon-search-o icon-small"></span>
+              <span class="icon icon-search"></span>
             </li>
           </ul>
         </div>
