changed markup and styles

--- a/index.html
+++ b/index.html
@@ -37,16 +37,6 @@
           </ul>
         </div>
         <div class="right-section">
-          <ul class="info-list">
-            <li>
-              <span class="icon icon-mail-o"></span>
-              <span>info@school.edu.in</span>
-            </li>
-            <li>
-              <span class="icon icon-phone-o"></span>
-              <span>+91-33-8585-8888</span>
-            </li>
-          </ul>
           <ul class="secondary-group">
             <li class="nav-links">
               <a href="#">Staff</a>
@@ -60,11 +50,11 @@
               <a href="#">Parents</a>
               <span class="icon icon-chevron-down-short"></span>
             </li>
-            <li>
-              <input type="search" class="search-box" />
-              <span class="icon icon-search"></span>
-            </li>
           </ul>
+          <form action="" class="search-form">
+            <input type="search" class="search-box" placeholder="Search..." />
+            <span class="icon icon-search"></span>
+          </form>
         </div>
       </nav>
     </header>
