add fonts, spacing, and padding

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/spriteSheet-v2.css" />
     <link rel="stylesheet" href="./css/variables.css" />
+    <link rel="stylesheet" href="./css/fonts.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
   </head>
@@ -17,7 +24,7 @@
             alt="a placeholder logo"
             class="logo"
           />
-          <ul class="primary-links">
+          <ul class="primary-links text-medium-bold">
             <li class="nav-links">
               <a href="#">ADMISSIONS</a>
               <span class="icon icon-chevron-down-short"></span>
@@ -37,7 +44,17 @@
           </ul>
         </div>
         <div class="right-section">
-          <ul class="secondary-group">
+          <ul class="info-list">
+            <li>
+              <span class="icon icon-mail-o"></span>
+              <span>info@school.edu.in</span>
+            </li>
+            <li>
+              <span class="icon icon-phone-o"></span>
+              <span>+91-33-8585-8888</span>
+            </li>
+          </ul>
+          <ul class="secondary-group text-small-extra">
             <li class="nav-links">
               <a href="#">Staff</a>
               <span class="icon icon-chevron-down-short"></span>
