fix info links style

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
           <ul class="info-list">
             <li>
               <span class="icon icon-mail-o"></span>
-              <span>info@school.edu.in</span>
+              <a href="#">info@school.edu.in</a>
             </li>
             <li>
               <span class="icon icon-phone-o"></span>
-              <span>+91-33-8585-8888</span>
+              <a href="#">+91-33-8585-8888</a>
             </li>
           </ul>
           <ul class="secondary-group text-small-extra">
@@ -70,8 +70,6 @@
           </ul>
           <form action="" class="search-form">
             <input type="search" class="search-box" placeholder="Search..." />
-            <!-- <span class="icon icon-search"></span> -->
-
             <svg
               width="16"
               height="16"
