--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/variables.css" />
+    <link rel="stylesheet" href="./css/spriteSheet-v2.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Image Slider Demo</title>
   </head>
@@ -24,6 +26,7 @@
         <img src="./img/right.svg" alt="" />
       </button>
       <div class="dots"></div>
+      <span class="icon icon-information-o info__icon"></span>
     </div>
     <script src="./js/app.js"></script>
   </body>
