add hover effect for nav links and fix inline-block whitespace

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -24,26 +24,26 @@
             alt="a placeholder logo"
             class="logo"
           />
-          <ul class="primary-links text-medium-bold">
-            <li class="nav-links">
+          <ul class="primary-links fix-white-space">
+            <li class="nav-links text-medium-bold">
               <a href="#">ADMISSIONS</a>
               <svg class="sprite sprite-small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
             </li>
-            <li class="nav-links">
+            <li class="nav-links text-medium-bold">
               <a href="#">ACADEMICS</a>
               <svg class="sprite sprite-small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
             </li>
-            <li class="nav-links">
+            <li class="nav-links text-medium-bold">
               <a href="#">NOTICE</a>
               <svg class="sprite sprite-small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
             </li>
-            <li class="nav-links">
+            <li class="nav-links text-medium-bold">
               <a href="#">ABOUT</a>
               <svg class="sprite sprite-small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
@@ -66,20 +66,20 @@
               <a href="#">+91-33-8585-8888</a>
             </li>
           </ul>
-          <ul class="secondary-group text-small-extra">
-            <li class="nav-links">
+          <ul class="secondary-group fix-white-space">
+            <li class="nav-links text-small-extra">
               <a href="#">Staff</a>
               <svg class="sprite sprite-small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
             </li>
-            <li class="nav-links">
+            <li class="nav-links text-small-extra">
               <a href="#">Students</a>
               <svg class="sprite sprite-small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
             </li>
-            <li class="nav-links">
+            <li class="nav-links text-small-extra">
               <a href="#">Parents</a>
               <svg class="sprite sprite-small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
