fix carousel style (#10)
* fix carousel style

* remove redundent code

--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
           <ul class="primary-links fix-white-space">
             <li class="nav-links text-medium-bold">
               <a href="#">ADMISSIONS</a>
-              <svg class="sprite sprite-small" role="img">
+              <svg class="sprite sprite--small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
             </li>
             <li class="nav-links text-medium-bold">
               <a href="#">ACADEMICS</a>
-              <svg class="sprite sprite-small" role="img">
+              <svg class="sprite sprite--small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
             </li>
             <li class="nav-links text-medium-bold">
               <a href="#">NOTICE</a>
-              <svg class="sprite sprite-small" role="img">
+              <svg class="sprite sprite--small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
             </li>
             <li class="nav-links text-medium-bold">
               <a href="#">ABOUT</a>
-              <svg class="sprite sprite-small" role="img">
+              <svg class="sprite sprite--small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
             </li>
@@ -54,13 +54,13 @@
         <div class="right-section">
           <ul class="info-list">
             <li>
-              <svg class="sprite sprite-normal" role="img">
+              <svg class="sprite sprite--normal" role="img">
                 <use href="img/sprite.svg#icon-mail-o"></use>
               </svg>
               <a href="#">info@school.edu.in</a>
             </li>
             <li>
-              <svg class="sprite sprite-normal" role="img">
+              <svg class="sprite sprite--normal" role="img">
                 <use href="img/sprite.svg#icon-phone-o"></use>
               </svg>
               <a href="#">+91-33-8585-8888</a>
@@ -69,26 +69,26 @@
           <ul class="secondary-group fix-white-space">
             <li class="nav-links text-small-extra">
               <a href="#">Staff</a>
-              <svg class="sprite sprite-small" role="img">
+              <svg class="sprite sprite--small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
             </li>
             <li class="nav-links text-small-extra">
               <a href="#">Students</a>
-              <svg class="sprite sprite-small" role="img">
+              <svg class="sprite sprite--small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
             </li>
             <li class="nav-links text-small-extra">
               <a href="#">Parents</a>
-              <svg class="sprite sprite-small" role="img">
+              <svg class="sprite sprite--small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
             </li>
           </ul>
           <form action="" class="search-form">
             <input type="search" class="search-box" placeholder="Search..." />
-            <svg class="sprite sprite-normal" role="img">
+            <svg class="sprite sprite--normal" role="img">
               <use href="img/sprite.svg#search"></use>
             </svg>
           </form>
@@ -107,13 +107,20 @@
           <img src="./img/image-3.jpg" alt="a random photo" />
         </div>
         <button class="slider__btn slider__btn--left">
-          <img src="./img/left.svg" alt="" />
+          <svg class="sprite sprite--large">
+            <use href="img/sprite.svg#carousel_arrow"></use>
+          </svg>
         </button>
         <button class="slider__btn slider__btn--right">
-          <img src="./img/right.svg" alt="" />
+          <svg class="sprite sprite--large">
+            <use href="img/sprite.svg#carousel_arrow"></use>
+          </svg>
         </button>
         <div class="dots"></div>
-        <span class="icon icon-information-o info__icon"></span>
+        <svg class="sprite sprite--medium info__icon swap-on-hover" role="img">
+          <use href="img/sprite.svg#icon-information-filled"></use>
+          <use href="img/sprite.svg#icon-information-o"></use>
+        </svg>
       </div>
     </main>
     <script src="./js/app.js"></script>
