revert all formatting changes

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
                                     href="img/sprite.svg#icon-chevron-down-short"
                                 ></use>
                             </svg>
+                            <ul>
+                                <li><a href="#">List item 1</a></li>
+                                <li><a href="#">List item 2</a></li>
+                                <li><a href="#">List item 3</a></li>
+                                <li><a href="#">List item 4</a></li>
+                            </ul>
                         </li>
                         <li class="nav-links text-medium-bold">
                             <a href="#">ACADEMICS</a>
