--- a/index.html
+++ b/index.html
@@ -1,155 +1,134 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-            rel="stylesheet"
-        />
-        <link rel="stylesheet" href="./css/sprite.css" />
-        <link rel="stylesheet" href="./css/variables.css" />
-        <link rel="stylesheet" href="./css/fonts.css" />
-        <link rel="stylesheet" href="./css/style.css" />
-        <title>Document</title>
-    </head>
-    <body>
-        <header>
-            <nav class="main-nav">
-                <div class="left-section">
-                    <img
-                        src="https://placehold.co/100"
-                        alt="a placeholder logo"
-                        class="logo"
-                    />
-                    <ul class="primary-links fix-white-space">
-                        <li class="nav-links text-medium-bold">
-                            <a href="#">ADMISSIONS</a>
-                            <svg class="sprite sprite--small" role="img">
-                                <use
-                                    href="img/sprite.svg#icon-chevron-down-short"
-                                ></use>
-                            </svg>
-                            <ul>
-                                <li><a href="#">List item 1</a></li>
-                                <li><a href="#">List item 2</a></li>
-                                <li><a href="#">List item 3</a></li>
-                                <li><a href="#">List item 4</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-links text-medium-bold">
-                            <a href="#">ACADEMICS</a>
-                            <svg class="sprite sprite--small" role="img">
-                                <use
-                                    href="img/sprite.svg#icon-chevron-down-short"
-                                ></use>
-                            </svg>
-                        </li>
-                        <li class="nav-links text-medium-bold">
-                            <a href="#">NOTICE</a>
-                            <svg class="sprite sprite--small" role="img">
-                                <use
-                                    href="img/sprite.svg#icon-chevron-down-short"
-                                ></use>
-                            </svg>
-                        </li>
-                        <li class="nav-links text-medium-bold">
-                            <a href="#">ABOUT</a>
-                            <svg class="sprite sprite--small" role="img">
-                                <use
-                                    href="img/sprite.svg#icon-chevron-down-short"
-                                ></use>
-                            </svg>
-                        </li>
-                    </ul>
-                </div>
-                <div class="right-section">
-                    <ul class="info-list">
-                        <li>
-                            <svg class="sprite sprite--normal" role="img">
-                                <use href="img/sprite.svg#icon-mail-o"></use>
-                            </svg>
-                            <a href="#">info@school.edu.in</a>
-                        </li>
-                        <li>
-                            <svg class="sprite sprite--normal" role="img">
-                                <use href="img/sprite.svg#icon-phone-o"></use>
-                            </svg>
-                            <a href="#">+91-33-8585-8888</a>
-                        </li>
-                    </ul>
-                    <ul class="secondary-group fix-white-space">
-                        <li class="nav-links text-small-extra">
-                            <a href="#">Staff</a>
-                            <svg class="sprite sprite--small" role="img">
-                                <use
-                                    href="img/sprite.svg#icon-chevron-down-short"
-                                ></use>
-                            </svg>
-                        </li>
-                        <li class="nav-links text-small-extra">
-                            <a href="#">Students</a>
-                            <svg class="sprite sprite--small" role="img">
-                                <use
-                                    href="img/sprite.svg#icon-chevron-down-short"
-                                ></use>
-                            </svg>
-                        </li>
-                        <li class="nav-links text-small-extra">
-                            <a href="#">Parents</a>
-                            <svg class="sprite sprite--small" role="img">
-                                <use
-                                    href="img/sprite.svg#icon-chevron-down-short"
-                                ></use>
-                            </svg>
-                        </li>
-                    </ul>
-                    <form action="" class="search-form">
-                        <input
-                            type="search"
-                            class="search-box"
-                            placeholder="Search..."
-                        />
-                        <svg class="sprite sprite--normal" role="img">
-                            <use href="img/sprite.svg#search"></use>
-                        </svg>
-                    </form>
-                </div>
-            </nav>
-        </header>
-        <main>
-            <div class="slider">
-                <div class="slide">
-                    <img src="./img/image-1.jpg" alt="a random photo" />
-                </div>
-                <div class="slide">
-                    <img src="./img/image-2.jpg" alt="a random photo" />
-                </div>
-                <div class="slide">
-                    <img src="./img/image-3.jpg" alt="a random photo" />
-                </div>
-                <button class="slider__btn slider__btn--left">
-                    <svg class="sprite sprite--large">
-                        <use href="img/sprite.svg#carousel_arrow"></use>
-                    </svg>
-                </button>
-                <button class="slider__btn slider__btn--right">
-                    <svg class="sprite sprite--large">
-                        <use href="img/sprite.svg#carousel_arrow"></use>
-                    </svg>
-                </button>
-                <div class="dots"></div>
-                <svg
-                    class="sprite sprite--medium info__icon swap-on-hover"
-                    role="img"
-                >
-                    <use href="img/sprite.svg#icon-information-filled"></use>
-                    <use href="img/sprite.svg#icon-information-o"></use>
-                </svg>
-            </div>
-        </main>
-        <script src="./js/app.js"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/sprite.css" />
+    <link rel="stylesheet" href="./css/variables.css" />
+    <link rel="stylesheet" href="./css/fonts.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <header>
+      <nav class="main-nav">
+        <div class="left-section">
+          <img
+            src="https://placehold.co/100"
+            alt="a placeholder logo"
+            class="logo"
+          />
+          <ul class="primary-links fix-white-space">
+            <li class="nav-links text-medium-bold">
+              <a href="#">ADMISSIONS</a>
+              <svg class="sprite sprite--small" role="img">
+                <use href="img/sprite.svg#icon-chevron-down-short"></use>
+              </svg>
+              <ul>
+                <li><a href="#">List item 1</a></li>
+                <li><a href="#">List item 2</a></li>
+                <li><a href="#">List item 3</a></li>
+                <li><a href="#">List item 4</a></li>
+              </ul>
+            </li>
+            <li class="nav-links text-medium-bold">
+              <a href="#">ACADEMICS</a>
+              <svg class="sprite sprite--small" role="img">
+                <use href="img/sprite.svg#icon-chevron-down-short"></use>
+              </svg>
+            </li>
+            <li class="nav-links text-medium-bold">
+              <a href="#">NOTICE</a>
+              <svg class="sprite sprite--small" role="img">
+                <use href="img/sprite.svg#icon-chevron-down-short"></use>
+              </svg>
+            </li>
+            <li class="nav-links text-medium-bold">
+              <a href="#">ABOUT</a>
+              <svg class="sprite sprite--small" role="img">
+                <use href="img/sprite.svg#icon-chevron-down-short"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
+        <div class="right-section">
+          <ul class="info-list">
+            <li>
+              <svg class="sprite sprite--normal" role="img">
+                <use href="img/sprite.svg#icon-mail-o"></use>
+              </svg>
+              <a href="#">info@school.edu.in</a>
+            </li>
+            <li>
+              <svg class="sprite sprite--normal" role="img">
+                <use href="img/sprite.svg#icon-phone-o"></use>
+              </svg>
+              <a href="#">+91-33-8585-8888</a>
+            </li>
+          </ul>
+          <ul class="secondary-group fix-white-space">
+            <li class="nav-links text-small-extra">
+              <a href="#">Staff</a>
+              <svg class="sprite sprite--small" role="img">
+                <use href="img/sprite.svg#icon-chevron-down-short"></use>
+              </svg>
+            </li>
+            <li class="nav-links text-small-extra">
+              <a href="#">Students</a>
+              <svg class="sprite sprite--small" role="img">
+                <use href="img/sprite.svg#icon-chevron-down-short"></use>
+              </svg>
+            </li>
+            <li class="nav-links text-small-extra">
+              <a href="#">Parents</a>
+              <svg class="sprite sprite--small" role="img">
+                <use href="img/sprite.svg#icon-chevron-down-short"></use>
+              </svg>
+            </li>
+          </ul>
+          <form action="" class="search-form">
+            <input type="search" class="search-box" placeholder="Search..." />
+            <svg class="sprite sprite--normal" role="img">
+              <use href="img/sprite.svg#search"></use>
+            </svg>
+          </form>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <div class="slider">
+        <div class="slide">
+          <img src="./img/image-1.jpg" alt="a random photo" />
+        </div>
+        <div class="slide">
+          <img src="./img/image-2.jpg" alt="a random photo" />
+        </div>
+        <div class="slide">
+          <img src="./img/image-3.jpg" alt="a random photo" />
+        </div>
+        <button class="slider__btn slider__btn--left">
+          <svg class="sprite sprite--large">
+            <use href="img/sprite.svg#carousel_arrow"></use>
+          </svg>
+        </button>
+        <button class="slider__btn slider__btn--right">
+          <svg class="sprite sprite--large">
+            <use href="img/sprite.svg#carousel_arrow"></use>
+          </svg>
+        </button>
+        <div class="dots"></div>
+        <svg class="sprite sprite--medium info__icon swap-on-hover" role="img">
+          <use href="img/sprite.svg#icon-information-filled"></use>
+          <use href="img/sprite.svg#icon-information-o"></use>
+        </svg>
+      </div>
+    </main>
+    <script src="./js/app.js"></script>
+  </body>
 </html>
