sub-menu added and search-bar background changed

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
               <svg class="sprite sprite--small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
-              <ul>
-                <li><a href="#">List item 1</a></li>
-                <li><a href="#">List item 2</a></li>
-                <li><a href="#">List item 3</a></li>
-                <li><a href="#">List item 4</a></li>
+              <ul class="sub-menu">
+                <li><a href="#" class="text-small-extra">List item 1</a></li>
+                <li><a href="#" class="text-small-extra">List item 2</a></li>
+                <li><a href="#" class="text-small-extra">List item 3</a></li>
+                <li><a href="#" class="text-small-extra">List item 4</a></li>
               </ul>
             </li>
             <li class="nav-links text-medium-bold">
@@ -42,21 +42,40 @@
               <svg class="sprite sprite--small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
+              <ul class="sub-menu">
+                <li><a href="#" class="text-small-extra">List item 1</a></li>
+                <li><a href="#" class="text-small-extra">List item 2</a></li>
+                <li><a href="#" class="text-small-extra">List item 3</a></li>
+                <li><a href="#" class="text-small-extra">List item 4</a></li>
+              </ul>
             </li>
             <li class="nav-links text-medium-bold">
               <a href="#">NOTICE</a>
               <svg class="sprite sprite--small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
+              <ul class="sub-menu">
+                <li><a href="#" class="text-small-extra">List item 1</a></li>
+                <li><a href="#" class="text-small-extra">List item 2</a></li>
+                <li><a href="#" class="text-small-extra">List item 3</a></li>
+                <li><a href="#" class="text-small-extra">List item 4</a></li>
+              </ul>
             </li>
             <li class="nav-links text-medium-bold">
               <a href="#">ABOUT</a>
               <svg class="sprite sprite--small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
+              <ul class="sub-menu">
+                <li><a href="#" class="text-small-extra">List item 1</a></li>
+                <li><a href="#" class="text-small-extra">List item 2</a></li>
+                <li><a href="#" class="text-small-extra">List item 3</a></li>
+                <li><a href="#" class="text-small-extra">List item 4</a></li>
+              </ul>
             </li>
           </ul>
         </div>
+
         <div class="right-section">
           <ul class="info-list">
             <li>
@@ -78,18 +97,36 @@
               <svg class="sprite sprite--small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
+              <ul class="sub-menu__right">
+                <li><a href="#" class="text-small-extra">List item 1</a></li>
+                <li><a href="#" class="text-small-extra">List item 2</a></li>
+                <li><a href="#" class="text-small-extra">List item 3</a></li>
+                <li><a href="#" class="text-small-extra">List item 4</a></li>
+              </ul>
             </li>
             <li class="nav-links text-small-extra">
               <a href="#">Students</a>
               <svg class="sprite sprite--small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
+              <ul class="sub-menu__right">
+                <li><a href="#" class="text-small-extra">List item 1</a></li>
+                <li><a href="#" class="text-small-extra">List item 2</a></li>
+                <li><a href="#" class="text-small-extra">List item 3</a></li>
+                <li><a href="#" class="text-small-extra">List item 4</a></li>
+              </ul>
             </li>
             <li class="nav-links text-small-extra">
               <a href="#">Parents</a>
               <svg class="sprite sprite--small" role="img">
                 <use href="img/sprite.svg#icon-chevron-down-short"></use>
               </svg>
+              <ul class="sub-menu__right">
+                <li><a href="#" class="text-small-extra">List item 1</a></li>
+                <li><a href="#" class="text-small-extra">List item 2</a></li>
+                <li><a href="#" class="text-small-extra">List item 3</a></li>
+                <li><a href="#" class="text-small-extra">List item 4</a></li>
+              </ul>
             </li>
           </ul>
           <form action="" class="search-form">
