add info icon text desc on hover

--- a/index.html
+++ b/index.html
@@ -123,10 +123,12 @@
           </svg>
         </button>
         <div class="dots"></div>
-        <svg class="sprite sprite--medium info__icon swap-on-hover" role="img">
-          <use href="img/sprite.svg#icon-information-filled"></use>
-          <use href="img/sprite.svg#icon-information-o"></use>
-        </svg>
+        <div class="info__icon" data-desc="This is a image discription">
+          <svg class="sprite sprite--medium swap-on-hover" role="img">
+            <use href="img/sprite.svg#icon-information-filled"></use>
+            <use href="img/sprite.svg#icon-information-o"></use>
+          </svg>
+        </div>
       </div>
     </main>
     <script src="./js/app.js"></script>
