add hero text with primary animation.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/sprite.css" />
     <link rel="stylesheet" href="./css/variables.css" />
     <link rel="stylesheet" href="./css/fonts.css" />
+    <link rel="stylesheet" href="./css/animation.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
   </head>
@@ -169,7 +170,12 @@
           </div>
         </div>
         <div class="hero-text">
-          <h1 class="text-large-bold">Welcome to School</h1>
+          <span class="text-large-bold text-scroll-horizontal">
+            Lorem ipsum dolor sit amet consectetur adipisicing. Lorem ipsum
+            dolor sit amet consectetur adipisicing. Lorem ipsum dolor sit amet
+            consectetur adipisicing. Lorem ipsum dolor sit amet consectetur
+            adipisicing.
+          </span>
         </div>
       </section>
     </main>
