add dynamic tooltip feature to carousel

--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
     <main>
       <section class="hero-section">
         <div class="slider">
-          <div class="slide">
-            <img src="./img/image-1.jpg" alt="a random photo" />
+          <div class="slide" title="first random image">
+            <img src="./img/image-1.jpg" alt="random photo 1" />
           </div>
-          <div class="slide">
-            <img src="./img/image-2.jpg" alt="a random photo" />
+          <div class="slide" title="second random image">
+            <img src="./img/image-2.jpg" alt="random photo 2" />
           </div>
-          <div class="slide">
-            <img src="./img/image-3.jpg" alt="a random photo" />
+          <div class="slide" title="third random image">
+            <img src="./img/image-3.jpg" alt="random photo 3" />
           </div>
           <button class="slider__btn slider__btn--left">
             <svg class="sprite sprite--large">
@@ -162,7 +162,7 @@
             </svg>
           </button>
           <div class="dots"></div>
-          <div class="info__icon" data-desc="This is a image">
+          <div class="image-info" data-desc="">
             <svg class="sprite sprite--medium swap-on-hover" role="img">
               <use href="img/sprite.svg#icon-information-filled"></use>
               <use href="img/sprite.svg#icon-information-o"></use>
