--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" href="./css/variables.css" />
     <link rel="stylesheet" href="./css/fonts.css" />
     <link rel="stylesheet" href="./css/animation.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/nav.css" />
+    <link rel="stylesheet" href="./css/hero.css" />
+    <script src="./js/app.js" defer></script>
     <title>Document</title>
   </head>
   <body>
@@ -178,7 +180,42 @@
           </span>
         </div>
       </section>
+
+      <section class="classes-section">
+        <h2>Our Classes</h2>
+        <span class="class-icon">
+          <svg class="sprite sprite--normal" role="img">
+            <use href="img/sprite.svg#icon-chevron-right"></use>
+          </svg>
+        </span>
+        <div class="classes">
+          <img src="https://placehold.co/350x250" alt="a placeholder image">
+          <p>Explore more</p>
+          <span class="class-icon">
+            <svg class="sprite sprite--medium" role="img">
+              <use href="img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+          </span>
+        </div>
+        <div class="classes">
+          <img src="https://placehold.co/350x250" alt="a placeholder image">
+          <p>Explore more</p>
+          <span class="class-icon">
+            <svg class="sprite sprite--medium" role="img">
+              <use href="img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+          </span>
+        </div>
+        <div class="classes">
+          <img src="https://placehold.co/350x250" alt="a placeholder image">
+          <p>Explore more</p>
+          <span class="class-icon">
+            <svg class="sprite sprite--medium" role="img">
+              <use href="img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+          </span>
+        </div>
+      </section>
     </main>
-    <script src="./js/app.js"></script>
   </body>
 </html>
