--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
       <section class="hero-section">
         <div class="slider">
           <div class="slide" title="first random image">
-            <img src="./img/image-1.jpg" alt="random photo 1" />
+            <img src="./img/cover-1.jpg" alt="random photo 1" />
           </div>
           <div class="slide" title="second random image">
-            <img src="./img/image-2.jpg" alt="random photo 2" />
+            <img src="./img/cover-2.jpg" alt="random photo 2" />
           </div>
           <div class="slide" title="third random image">
-            <img src="./img/image-3.jpg" alt="random photo 3" />
+            <img src="./img/cover-3.jpg" alt="random photo 3" />
           </div>
           <button class="slider__btn slider__btn--left">
             <svg class="sprite sprite--large">
@@ -194,7 +194,7 @@
         </div>
         <div class="classes-wrapper">
           <article class="class-cards">
-            <img src="https://placehold.co/350x250" alt="a placeholder image" />
+            <img src="./img/class-1.jpg" alt="a placeholder image" />
             <div class="classes-info-wrapper">
               <p class="text-large-bold">Explore more</p>
               <span class="class-cards__icon">
@@ -205,7 +205,7 @@
             </div>
           </article>
           <article class="class-cards">
-            <img src="https://placehold.co/350x250" alt="a placeholder image" />
+            <img src="./img/class-2.jpg" alt="a placeholder image" />
             <div class="classes-info-wrapper">
               <p class="text-large-bold">Explore more</p>
               <span class="class-cards__icon">
@@ -216,7 +216,7 @@
             </div>
           </article>
           <article class="class-cards">
-            <img src="https://placehold.co/350x250" alt="a placeholder image" />
+            <img src="./img/class-3.jpg" alt="a placeholder image" />
             <div class="classes-info-wrapper">
               <p class="text-large-bold">Explore more</p>
               <span class="class-cards__icon">
