--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/sprite.css" />
     <link rel="stylesheet" href="./css/variables.css" />
     <link rel="stylesheet" href="./css/fonts.css" />
     <link rel="stylesheet" href="./css/animation.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/nav.css" />
+    <link rel="stylesheet" href="./css/hero.css" />
+    <link rel="stylesheet" href="./css/classes.css" />
+    <script src="./js/app.js" defer></script>
     <title>Document</title>
   </head>
   <body>
@@ -143,13 +147,13 @@
       <section class="hero-section">
         <div class="slider">
           <div class="slide" title="first random image">
-            <img src="./img/image-1.jpg" alt="random photo 1" />
+            <img src="./img/cover-1.jpg" alt="random photo 1" />
           </div>
           <div class="slide" title="second random image">
-            <img src="./img/image-2.jpg" alt="random photo 2" />
+            <img src="./img/cover-2.jpg" alt="random photo 2" />
           </div>
           <div class="slide" title="third random image">
-            <img src="./img/image-3.jpg" alt="random photo 3" />
+            <img src="./img/cover-3.jpg" alt="random photo 3" />
           </div>
           <button class="slider__btn slider__btn--left">
             <svg class="sprite sprite--large">
@@ -178,7 +182,52 @@
           </span>
         </div>
       </section>
+
+      <section class="classes-section">
+        <div class="section__title-wrapper">
+          <h2 class="section__title heading-2">Our Classes</h2>
+          <span class="section__title-icon">
+            <svg class="sprite sprite--normal" role="img">
+              <use href="img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+          </span>
+        </div>
+        <div class="classes-wrapper">
+          <article class="class-cards">
+            <img src="./img/class-1.jpg" alt="a placeholder image" />
+            <div class="classes-info-wrapper">
+              <p class="text-large-bold">Explore more</p>
+              <span class="class-cards__icon">
+                <svg class="sprite sprite--small" role="img">
+                  <use href="img/sprite.svg#icon-chevron-right"></use>
+                </svg>
+              </span>
+            </div>
+          </article>
+          <article class="class-cards">
+            <img src="./img/class-2.jpg" alt="a placeholder image" />
+            <div class="classes-info-wrapper">
+              <p class="text-large-bold">Explore more</p>
+              <span class="class-cards__icon">
+                <svg class="sprite sprite--small" role="img">
+                  <use href="img/sprite.svg#icon-chevron-right"></use>
+                </svg>
+              </span>
+            </div>
+          </article>
+          <article class="class-cards">
+            <img src="./img/class-3.jpg" alt="a placeholder image" />
+            <div class="classes-info-wrapper">
+              <p class="text-large-bold">Explore more</p>
+              <span class="class-cards__icon">
+                <svg class="sprite sprite--small" role="img">
+                  <use href="img/sprite.svg#icon-chevron-right"></use>
+                </svg>
+              </span>
+            </div>
+          </article>
+        </div>
+      </section>
     </main>
-    <script src="./js/app.js"></script>
   </body>
 </html>
