facility markup completed

--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
             </li>
           </ul>
         </div>
-
         <div class="right-section">
           <ul class="info-list">
             <li>
@@ -182,7 +181,6 @@
           </span>
         </div>
       </section>
-
       <section class="classes-section">
         <div class="section__title-wrapper">
           <h2 class="section__title heading-2">Our Classes</h2>
@@ -192,7 +190,7 @@
             </svg>
           </span>
         </div>
-        <div class="classes-wrapper">
+        <div class="classes-cards-wrapper">
           <article class="class-cards">
             <img src="./img/class-1.jpg" alt="a placeholder image" />
             <div class="classes-info-wrapper">
@@ -226,6 +224,41 @@
               </span>
             </div>
           </article>
+        </div>
+      </section>
+
+      <section class="facility-section">
+        <div class="section__title-wrapper">
+          <h2 class="section__title heading-2">Our Infrastructure</h2>
+          <span class="section__title-icon">
+            <svg class="sprite sprite--normal" role="img">
+              <use href="img/sprite.svg#icon-chevron-right"></use>
+            </svg>
+          </span>
+        </div>
+        <div class="facility-cards-wrapper">
+          <atricle class="facility-cards">
+            <img
+              src="./img/facility-1.jpg"
+              alt="a picuter of the computer lab"
+            />
+            <p class="facility-description">Computer Lab</p>
+          </atricle>
+          <atricle class="facility-cards">
+            <img src="./img/facility-2.jpg" alt="a picuter of the infirmary" />
+            <p class="facility-description">Infirmary</p>
+          </atricle>
+          <atricle class="facility-cards">
+            <img src="./img/facility-3.jpg" alt="a picuter of the cafetaria" />
+            <p class="facility-description">Cafetaria</p>
+          </atricle>
+          <atricle class="facility-cards">
+            <img
+              src="./img/facility-4.jpg"
+              alt="a picuter of the chemistry lab"
+            />
+            <p class="facility-description">Chemistry Lab</p>
+          </atricle>
         </div>
       </section>
     </main>
