facility section completed with styles

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./css/nav.css" />
     <link rel="stylesheet" href="./css/hero.css" />
     <link rel="stylesheet" href="./css/classes.css" />
+    <link rel="stylesheet" href="./css/facilities.css" />
     <script src="./js/app.js" defer></script>
     <title>Document</title>
   </head>
@@ -242,22 +243,22 @@
               src="./img/facility-1.jpg"
               alt="a picuter of the computer lab"
             />
-            <p class="facility-description">Computer Lab</p>
+            <p class="facility-card-description">Computer Lab</p>
           </atricle>
           <atricle class="facility-cards">
             <img src="./img/facility-2.jpg" alt="a picuter of the infirmary" />
-            <p class="facility-description">Infirmary</p>
+            <p class="facility-card-description">Infirmary</p>
           </atricle>
           <atricle class="facility-cards">
             <img src="./img/facility-3.jpg" alt="a picuter of the cafetaria" />
-            <p class="facility-description">Cafetaria</p>
+            <p class="facility-card-description">Cafetaria</p>
           </atricle>
           <atricle class="facility-cards">
             <img
               src="./img/facility-4.jpg"
               alt="a picuter of the chemistry lab"
             />
-            <p class="facility-description">Chemistry Lab</p>
+            <p class="facility-card-description">Chemistry Lab</p>
           </atricle>
         </div>
       </section>
